[package]
name = "video_downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = [
  "macros",
  "rt-multi-thread",
  "process"
] }
clap = { version = "4.5.7", features = ["derive"] }
futures = "0.3.30"
thirtyfour = "0.32.0"
hudsucker = "0.22.0"
uuid = "1.8.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
anyhow = "1.0.86"
regex = "1.10.5"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
] }


# pingora-proxy = { version = "0.2.0" }
